Adjusted colors. Fixed BG error. Fixed z-index errors

--- a/src/components/list/chatList/addUser/addUser.css
+++ b/src/components/list/chatList/addUser/addUser.css
@@ -8,6 +8,7 @@
   background-color: var(--color-main-bg);
   border-radius: var(--border-radius-sm);
   animation: appear 0.2s ease-out forwards;
+  z-index: 200;
 
   .add-user__form {
     display: flex;
